# proxyvars

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-dev.txt  setup-local.bash  sitemap.xml  zeugvars.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  functionality.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  doclinks.yml  documentation-links.yml  lint.yml  mypy.yml  news.yml  pylint.yml  release.yml  smokeshow.yml  test.yml
api/: index.html
changelog/: index.html
changes/: +0388769e.changed.md  +4eb42616.fixed.md  .gitignore  11.fixed.md
code_of_conduct/: index.html
commonvars/: __init__.py
contributing/: index.html
docs/: api.md  contributing.md  index.md
news/: +079e8482.changed.md  +2dd39fb0.removed.md  +38cc2210.fixed.md  +844e96a3.added.md  +e8135310.fixed.md  .gitignore
proxyvars/: __init__.py
scripts/: 34cc9c6.sh  7935235.sh  bump.sh  release.py  skeleton.0.0.2rc-137-g9111179.bash  skeleton.0.0.2rc-234-gca605f0.bash  skeleton.0.0.2rc-238-g68b0ab8.bash  skeleton.0.0.2rc-239-ga084376.bash  skeleton.0.0.2rc-240-gf4bdbb3.bash  skeleton.sh  sync.sh
search/: search_index.json
tests/: conftest.py  test_operators.py  test_proxyvars.py
zeugvars/: __init__.py
