[tool.poetry]
name = "zeugvars"
version = "0.1.1"
description = ""
authors = ["bswck <bswck.dev@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bswck/configzen"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ruff = "^0.0.275"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
