[tool.poetry]
name = "commonvars"
version = "0.4.0"
description = "A simple & straight-forward Python module for creating context-dependent proxy objects."
authors = ["bswck <bswck.dev@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bswck/commonvars"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ruff = "^0.0.275"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.4.0"
pytest-lazy-fixture = "^0.6.3"
pre-commit = "^3.3.3"
pylint = "^2.17.4"
nox = "^2023.4.22"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black section
[tool.black]
line-length = 88          # Must be same as tool.ruff.line-length
target-version = ['py38']

[tool.coverage.run]
omit = ['*tests*']

[tool.coverage.report]
ignore_errors = true

[tool.ruff]
target-version = "py38"
select = ["ALL"]
# To discuss the presented rationales, contact the author: @bswck.
ignore = [
  # Description: Class attribute is shadowing a Python builtin
  # Rationale: The library itself is quite hackish, so it's fine.
  "A003",

  # Description: Missing type annotation for self in method
  # Rationale: It is mostly redundant, as is for ANN102.
  "ANN101",

  # Description: Missing type annotation for cls in method
  # Rationale: It is mostly redundant, as is for ANN101.
  "ANN102",

  # Description: Dynamically typed expressions (typing.Any) are disallowed
  # Rationale:
  #  The library is meant to operate on many dynamic objects.
  #  When it is possible, use object instead of Any when typing only-input values
  #  whose extra (to the object class) methods are not used.
  "ANN401",

  # Description: Function is too complex (14 > 10)
  # Rationale:
  #  Too complex functions very often are unimprovable without sacrificing readability.
  #  This rule is disabled for now, but might be enabled in the future.
  "C901",

  # Description: `inplace=True` should be avoided; it has inconsistent behavior
  # Rationale:
  #   Sure, but we're not using pandas and the keyword argument
  #   is encapsulated in the library.
  "PD002",

  # Description: Too many arguments to function call
  # Rationale: This is often intentional and improves readability. Disabled for now.
  "PLR0913",
]
# Always be careful. Use with caution.
fix = false
exclude = ["examples/", "tests/"]

[tool.isort]
profile = "black"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.poetry_bumpversion.file."README.md"]
search = 'commonvars `v{current_version}`'
replace = 'commonvars `v{new_version}`'
